# AlgoCityGL-Live

./: CMakeLists.txt  README.md  imgui.ini  main.cpp
city/: AreaManager.cpp  AreaManager.h  CityArea.h  Vehicle.cpp  Vehicle.h
data/: borella_area.json  borella_area_real.json  demo_traffic_area.json  moratuwa_area.json  moratuwa_area_demo_backup.json  moratuwa_area_real.json  pettah_area.json  pettah_area_real.json  random_city_area.json
data/osm/: borella_raw_osm.geojson  moratuwa_raw_osm.json  pettah_raw_osm.geojson  pettah_raw_osm.json
graphics/: CircleAlgorithms.cpp  CircleAlgorithms.h  ClippingAlgorithms.cpp  ClippingAlgorithms.h  FillAlgorithms.cpp  FillAlgorithms.h  LineAlgorithms.cpp  LineAlgorithms.h  Matrix3x3.cpp  Matrix3x3.h  PixelBuffer.cpp  PixelBuffer.h  Projection2_5D.cpp  Projection2_5D.h
include/: Application.h  Camera2D.h  Color.h  ImGuiPanels.h  Renderer.h
live/: LiveContextEngine.cpp  LiveContextEngine.h
simulation/: SignalController.cpp  SignalController.h  VehicleController.cpp  VehicleController.h
src/: Application.cpp  Camera2D.cpp  ImGuiPanels.cpp  Renderer.cpp
tools/: fetch_borella_osm.py  generate_random_city.py  osm_to_algocity.py
